CCE-326 : fix for white space when feedback modal is open.

--- a/docs/template/public/kss.less
+++ b/docs/template/public/kss.less
@@ -11,6 +11,7 @@ body.kss-body {
     padding: 0;
     max-width: 100%;
     padding-top: 100px;
+    padding-right:0!important;
 }
 
 .hyComponentsPage{
